Fix whitespace and adjust styles

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -339,13 +339,13 @@ section#dashboard ul#zoom-controls {
   list-style: none;
   right: 0;
   top: 50%;
-  margin-top: -112px;
+  margin-top: -75px;
   position: absolute;
 }
 
 section#dashboard ul#zoom-controls .btn {
-  width: 75px;
-  height: 75px;
+  width: 50px;
+  height: 50px;
   background: #000;
 }
 
